# reflector

./: .gitignore  BUGS.org  CLAUDE.md  Cargo.toml  Makefile  README.org  reflector-config.toml
.github/workflows/: merge-check.yml  rust.yml
reflector/src/: main.rs
reflector/tests/: reflect.rs
src/: capture.rs  config.rs  flatten.rs  lib.rs  main.rs  mirror.rs  pathmaker.rs  reflect.rs  remote.rs  source.rs  store.rs  time_list.rs  time_range.rs  time_util.rs
src/pathmaker/: error.rs  goes.rs  goes_r.rs  identity.rs  new.rs  sdo.rs  time.rs  util.rs
src/remote/: client.rs  factory.rs  ftp.rs  gotten.rs  http.rs  mock.rs
src/store/: error.rs  file.rs  file_list.rs
tests/: config.rs  reflector_status.rs
