[package]
name = "reflector"
version = "0.1.0"
edition = "2021"
default-run = "reflector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
log = "0.4.20"
regex = "1.10.0"
serde = { version = "1.0.188", features = ["derive", "serde_derive"] }
std-logger = "0.5.2"
suppaftp = "5.2.1"
toml = "0.7.6"
ureq = "2.8.0"
url = "2.4.1"

[dev-dependencies]
assert_cmd = "2.0.12"
tempfile = "3.8.0"


