[package]
name = "reflector"
version = "0.1.0"
edition = "2021"
default-run = "reflector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
log = "0.4.22"
regex = "1.10.6"
serde = { version = "1.0.205", features = ["derive", "serde_derive"] }
std-logger = "0.5.3"
suppaftp = "5.4.0"
toml = "0.7.8"
ureq = "2.10.1"
url = "2.5.2"

# these include examples and benchmarks, as well as tests
[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.12.0"
