[package]
name = "reflector"
version = "0.1.0"
edition = "2021"
default-run = "reflector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
log = "0.4.27"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
std-logger = "0.5.7"
suppaftp = "5.4.0"
toml = "0.7.8"
ureq = "2.12.1"
url = "2.5.4"

# these include examples and benchmarks, as well as tests
[dev-dependencies]
assert_cmd = "2.0.17"
httpmock = "0.7.0"
